# RealCars

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  inspect-tire-measurement-dataset.yml  tire-measurement-validation.yml
apps/tire_measurement_compare/: main.cpp
apps/tire_rig/: main.cpp
cmake/: CompilerWarnings.cmake  VerifyTireMeasurementComparison.cmake  VerifyTireRigOutput.cmake
data/tires/: reference_sport_tire.cfg
docs/: coordinate-system.md  decision-log.md  development-workflow.md  physics-roadmap.md  project-notes.md  tire-characterization.md  tire-model-measurement-comparison.md  tire-model.md
docs/research/: suspension-simulation-source-register.md  tire-data-source-register-addendum-2026-07-16.md  tire-data-source-register.md
include/realcars/tire/: BrushTireModel.hpp  BrushTireModelParametersIO.hpp  LinearTireModel.hpp  TireModel.hpp
src/tire/: BrushTireModel.cpp  BrushTireModelParametersIO.cpp  LinearTireModel.cpp
tests/: test_brush_tire_model.cpp  test_linear_tire_model.cpp  test_tire_characterization_contracts.cpp
tests/fixtures/tydex_h/: KIT_COMB_SYNTHETIC.TDB  KIT_LONG_SYNTHETIC.TDA  KIT_SIDE_SYNTHETIC.TDX
tools/: fetch_kit_tire_measurements.py  inspect_tire_measurement_dataset.py  plot_tire_characterization.py  plot_tire_measurement_comparison.py
